--- a/template.yaml
+++ b/template.yaml
@@ -1,10 +1,52 @@
----
-AWSTemplateFormatVersion: 2010-09-09
-Description: create ec2 instance
+AWSTemplateFormatVersion: '2010-09-09'
+Description: AWS CloudFormation Template for Glue Job and Lambda Functions triggered by S3
 
 Resources:
-  WebAppInstance:
-    Type: AWS::EC2::Instance
+  # S3 Bucket
+  DataBucket:
+    Type: AWS::S3::Bucket
     Properties:
-      ImageId: ami-0d5eff06f840b45e9 # ImageID valid only in us-east-1 region
-      InstanceType: t2.micro
+      BucketName: s3://bb07project/input1/   # Replace with your actual bucket name
+
+  # Lambda Function to Invoke Glue Crawler
+  LambdaInvokeCrawler:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: 'InvokeGlueCrawler'
+      Handler: LambdaCodeRunCrawler.lambda_handler
+      Role: arn:aws:iam::034552991439:role/LabRole  # Replace with your existing role ARN
+      Runtime: python3.9
+      Code:
+        ZipFile: |
+          import json
+          import boto3
+
+          glue = boto3.client('glue')
+
+          def lambda_handler(event, context):
+              response = glue.start_crawler(
+                  Name='newone'  # Replace with your actual Glue Crawler name
+              )
+              return {
+                  'statusCode': 200,
+                  'body': json.dumps('Crawler started')
+              }
+
+  # S3 Bucket Notification to Trigger Lambda
+  S3BucketNotification:
+    Type: AWS::S3::BucketNotification
+    Properties:
+      Bucket: !Ref DataBucket
+      NotificationConfiguration:
+        LambdaConfigurations:
+          - Event: 's3:ObjectCreated:*'
+            Function: !GetAtt LambdaInvokeCrawler.Arn
+
+  # Permission for S3 to invoke Lambda
+  LambdaInvokePermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: 'lambda:InvokeFunction'
+      FunctionName: !Ref LambdaInvokeCrawler
+      Principal: 's3.amazonaws.com'
+      SourceArn: !GetAtt DataBucket.Arn
