--- a/template.yaml
+++ b/template.yaml
@@ -6,7 +6,7 @@ Resources:
   DataBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: s3://bb07project/input1/   # Replace with your actual bucket name
+      BucketName: bb07project # Replace with your actual bucket name
       NotificationConfiguration:
         LambdaConfigurations:
           - Event: 's3:ObjectCreated:*'
