--- a/template.yaml
+++ b/template.yaml
@@ -43,4 +43,4 @@ Resources:
       Action: 'lambda:InvokeFunction'
       FunctionName: !Ref LambdaInvokeCrawler
       Principal: 's3.amazonaws.com'
-      SourceArn: !GetAtt arn:aws:s3:::bb07project.arn
+      SourceArn: !GetAtt DataBucket.arn
