--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,25 @@
-name: lambdacreate
+name: anti_money_laundering
 on:
   push:
     branches: [ main ]
 
 jobs:
   Deployment:
-    name: lambdacreate
+    name: anti_money_laundering 
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v1
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install awscli
-
-      - name: Create Lambda Function via CloudFormation
-        run: |
-          aws cloudformation create-stack --stack-name lambda-example --template-body file://lambda-template.yaml
+      - run: aws cloudformation create-stack --stack-name ec2-example --template-body file://ec2.yaml
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
